--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ build==0.5.1
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
+cycler==0.10.0
 google-api-core==1.31.0
 google-api-python-client==2.12.0
 google-auth==1.32.1
@@ -11,6 +12,8 @@ googleapis-common-protos==1.53.0
 gspread==3.7.0
 httplib2==0.19.1
 idna==2.10
+kiwisolver==1.3.1
+matplotlib==3.4.2
 numpy==1.20.3
 oauth2client==4.1.3
 oauthlib==3.1.1
@@ -21,9 +24,11 @@ protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+research-thyroid-digitake @ file:///Users/song/Dev/thyroid
 rsa==4.7.2
 six==1.16.0
 toml==0.10.2
