--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.2.0
 build==0.5.1
 cachetools==4.2.2
 certifi==2021.5.30
@@ -12,6 +13,7 @@ googleapis-common-protos==1.53.0
 gspread==3.7.0
 httplib2==0.19.1
 idna==2.10
+iniconfig==1.1.1
 kiwisolver==1.3.1
 matplotlib==3.4.2
 numpy==1.20.3
@@ -20,10 +22,13 @@ oauthlib==3.1.1
 packaging==21.0
 pep517==0.10.0
 Pillow==8.3.1
+pluggy==0.13.1
 protobuf==3.17.3
+py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
+pytest==6.2.4
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.25.1
