--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ six==1.16.0
 toml==0.10.2
 torch==1.9.0
 torchvision==0.10.0
+tqdm==4.61.2
 typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.6
