--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -27,5 +27,6 @@ jobs:
       run: |
           sudo apt update
           sudo apt install nvidia-cuda-toolkit
+          sudo apt install nvidia-cudnn
           pipenv install
           make ci
