--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -18,15 +18,14 @@ jobs:
         build: [ linux ]
         include:
           - build: linux
-            os: ubuntu-latest
+            os: ubuntu-22.04
     steps:
     - uses: actions/checkout@v1
     - name: Install apt packages
       run: |
           sudo apt update
           sudo apt install nvidia-cuda-toolkit
-          sudo apt install nvidia-cudnn
-          sudo /usr/sbin/update-nvidia-cudnn
+          sudo apt install nvidia-cudnn && sudo /usr/sbin/update-nvidia-cudnn -d
     - name: Install pipenv
       run: pip install pipenv
     - name: Run test
