--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -26,6 +26,7 @@ jobs:
           sudo apt update
           sudo apt install nvidia-cuda-toolkit
           sudo apt install nvidia-cudnn && sudo /usr/sbin/update-nvidia-cudnn -u
+          sudo apt install unrar
     - name: Install pipenv
       run: pip install pipenv
     - name: Run test
