--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ jupyter = "*"
 matplotlib = "*"
 tqdm = "*"
 scikit-learn = "*"
+research-thyroid-digitake = {editable = true, path = "./digitake"}
 
 [dev-packages]
 
