Fix missing 'pytz' in Action?

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ scikit-learn = "*"
 research-thyroid-digitake = {editable = true, path = "./digitake"}
 gspread = "*"
 pyparsing = "==2.4.7"
+pytz = "*"
 
 [dev-packages]
 
