--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt install unrar
     - name: Install pipenv
       run: pip install pipenv
-    - name: Run test
+    - name: Run test 🧪🧪🧪🧪
       run: make ci
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
