--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install apt packages
       run: |
-          sudo apt update
+          #sudo apt update
           sudo apt install nvidia-cuda-toolkit
           sudo apt install nvidia-cudnn && sudo /usr/sbin/update-nvidia-cudnn -u
           sudo apt install unrar
