Add `sudo apt install libcupti-dev`

--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -27,6 +27,7 @@ jobs:
           sudo apt install nvidia-cuda-toolkit
           sudo apt install nvidia-cudnn && sudo /usr/sbin/update-nvidia-cudnn -u
           sudo apt install unrar
+          sudo apt install libcupti-dev
     - name: Install pipenv
       run: pip install pipenv
     - name: Run test 🧪🧪🧪🧪
