--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -36,8 +36,8 @@ jobs:
           #----
           wget https://developer.download.nvidia.com/compute/redist/cudnn/v8.5.0/local_installers/11.7/cudnn-linux-x86_64-8.5.0.96_cuda11-archive.tar.xz
           tar xvf cudnn-linux-x86_64-8.5.0.96_cuda11-archive.tar.xz
-          sudo cp -P cuda/include/cudnn.h /usr/local/cuda-11.7/include
-          sudo cp -P cuda/lib/libcudnn* /usr/local/cuda-11.7/lib64/
+          sudo cp -P cudnn-linux-x86_64-8.5.0.96_cuda11-archive/include/cudnn.h /usr/local/cuda-11.7/include
+          sudo cp -P cudnn-linux-x86_64-8.5.0.96_cuda11-archive/lib/libcudnn* /usr/local/cuda-11.7/lib64/
           sudo chmod a+r /usr/local/cuda-11.7/lib64/libcudnn*
           #----
           sudo apt install unrar
