--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install apt packages
       run: |
-          #---- for 'cuda-11-7'
+          #---- ** 'cuda-11-7'
           wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-ubuntu2204.pin
           sudo mv cuda-ubuntu2204.pin /etc/apt/preferences.d/cuda-repository-pin-600
           sudo apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/3bf863cc.pub
@@ -31,9 +31,14 @@ jobs:
           #----
           sudo apt update
           sudo apt install nvidia-cuda-toolkit
+          #---- ** primus852/cuda_11.7_installation_on_Ubuntu_22.04 - https://gist.github.com/primus852/b6bac167509e6f352efb8a462dcf1854
           sudo apt install cuda-11-7
-          ##sudo apt install nvidia-cudnn && sudo /usr/sbin/update-nvidia-cudnn -u
-          #----
+          #--
+          echo 'export PATH=/usr/local/cuda-11.7/bin:$PATH' >> ~/.bashrc
+          echo 'export LD_LIBRARY_PATH=/usr/local/cuda-11.7/lib64:$LD_LIBRARY_PATH' >> ~/.bashrc
+          source ~/.bashrc
+          sudo ldconfig
+          #--
           wget https://developer.download.nvidia.com/compute/redist/cudnn/v8.5.0/local_installers/11.7/cudnn-linux-x86_64-8.5.0.96_cuda11-archive.tar.xz
           tar xvf cudnn-linux-x86_64-8.5.0.96_cuda11-archive.tar.xz
           sudo cp -P cudnn-linux-x86_64-8.5.0.96_cuda11-archive/include/cudnn.h /usr/local/cuda-11.7/include
