--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -38,6 +38,11 @@ jobs:
           sudo cp -P cudnn-linux-x86_64-8.5.0.96_cuda11-archive/include/cudnn.h /usr/local/cuda-11.7/include
           sudo cp -P cudnn-linux-x86_64-8.5.0.96_cuda11-archive/lib/libcudnn* /usr/local/cuda-11.7/lib64/
           sudo chmod a+r /usr/local/cuda-11.7/lib64/libcudnn*
+          #---- resolve libnccl
+          wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.0-1_all.deb
+          sudo dpkg -i cuda-keyring_1.0-1_all.deb
+          sudo apt update
+          sudo apt install libnccl2=2.13.4-1+cuda11.7 libnccl-dev=2.13.4-1+cuda11.7
           #----
           sudo apt install unrar
     - name: Install pipenv
