--- a/.github/workflows/pipenv.yml
+++ b/.github/workflows/pipenv.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Install pipenv
       run: pip install pipenv
     - name: Run test 🧪🧪🧪🧪
-      run: make ci
+      run: PATH=/usr/local/cuda-11.7/bin:$PATH LD_LIBRARY_PATH=/usr/local/cuda-11.7/lib64:$LD_LIBRARY_PATH  make ci
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
