--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = research_thyroid_wsdan
-version = 0.3.20
+name = research_thyroid_transduction
+version = 0.1.0
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/research-coders-cs/research_thyroid
