--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ jupyter = "*"
 matplotlib = "*"
 tqdm = "*"
 pandas = "*"
-torchdata = "0.3.0"
+torchdata = "0.3.0"  # enforces torch 1.11
 torchtext = "0.12"
 #spacy = "3.2"  # errors on numpy v1 ...
 spacy = "*"
