Do set up cv2 with numpy v1.x

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ altair = "*"
 GPUtil = "*"
 dataframe-image = "*"
 vl-convert-python = "*"
+numpy = "==1.26.4"
+opencv-python = "==4.7.0.72"
 
 [dev-packages]
 
